--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-
+    <p class="text">Loading..</p>
+    <div class="modal">
+        <div class="modal-content">
+            <h1 class="title">Stay alive!</h1>
+            <p class="info">
+                Press <b>↑</b> to move and <b>↓</b> to stop.
+            </p>
+            <button class="start-btn">loading...</button>
+        </div>
+    </div>
+    
+    
 
     <script src="js/three.min.js"></script>
     <script src="js/three.js"></script>
